# aviation

./: .pre-commit-config.yaml  README.md  aviation.py  mkdocs.yml  passengers_per_day.py  pyproject.toml
.github/workflows/: check.yml
analysis/: passengers_per_day.py  required_global_fleet.py
docs/: aviation.md  index.md
docs/api/: aviation.md  index.md
docs/javascripts/: mathjax.js
src/aviation/: __init__.py  _engine.py  _model.py  aviation.py  demand.py  units.py
tests/: test_aviation.py  test_demand.py  test_engine.py
