[project]
name = "aviation"
version = "0.1.0"
description = "Global model for Aviation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = ["pre-commit>=4.2.0", "pytest>=8.4.1", "ruff>=0.12.3"]
docs = [
    "mkdocs-bibtex>=4.4.0",
    "mkdocs-material>=9.6.15",
    "mkdocs-prebuild>=0.5.0",
    "mkdocstrings[python]>=0.29.1",
]

[tool.uv]
default-groups = ["dev", "docs"]

[[tool.uv.index]]
name = "gitlab"
url = "https://gitlab.developers.cam.ac.uk/api/v4/projects/8115/packages/pypi/simple"

[build-system]
requires = ["uv_build>=0.8.0,<0.9.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    #documentaiton rules
    "D",
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    #pepnaming
    "N",
]
ignore = ["E501"]

[tool.ruff.lint.pydocstyle]
convention= "google"

[tool.ruff.lint.per-file-ignores]
# Ignore `T201` (import violations) in analysis directory.
"analysis/*" = ["T201"]
"tests/*" = ["D1"]
