[project]
name = "aviation"
version = "0.1.0"
description = "Global model for Aviation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "mypy>=1.17.0",
    "pre-commit>=4.2.0",
 "pytest>=8.4.1",
 "ruff>=0.12.3",
]
docs = [
    "mkdocs-bibtex>=4.4.0",
    "mkdocs-material>=9.6.15",
    "mkdocs-prebuild>=0.5.0",
    "mkdocstrings[python]>=0.29.1",
]

[tool.uv]
default-groups = ["dev", "docs"]

[[tool.uv.index]]
name = "gitlab"
url = "https://gitlab.developers.cam.ac.uk/api/v4/projects/8115/packages/pypi/simple"

[build-system]
requires = ["uv_build>=0.8.0,<0.9.0"]
build-backend = "uv_build"

[tool.mypy]
mypy_path = "src"
strict = true

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN1",
    "COM812",
    "COM819",
    "D206",
    "D300",
    "E111",
    "E114",
    "E117",
    "E501",
    "ISC001",
    "ISC002",
    "Q000",
    "Q001",
    "Q002",
    "Q003",
    "W191",
    "ERA001",
]

[tool.ruff.lint.pydocstyle]
convention= "google"

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false
parametrize-values-type = "tuple"

[tool.ruff.lint.per-file-ignores]
# Ignore `T201` (import violations) in analysis directory.
"analysis/*" = ["T201", "INP001"]
"tests/*" = ["D1", "INP001", "S101"]
